my_newsapp/static/my_newsapp/home_style.css
nav a {
  color: white;
  text-decoration: none;
  font-weight: 400;
}

nav a:hover {
  color: white;
  text-decoration: none;  
}

h3 a, h4 a, h5 a, p a {
  color: rgb(49, 49, 49);
}

h3 a:hover, p a:hover  {
  color: rgb(105, 102, 102);
  text-decoration: none;
}

.padding-bottom-30 {
  padding-bottom: 30px;
}

.padding-top-30 {
  padding-top: 30px;
}

.padding-top-20 {
  padding-top: 20px;
}

.padding-bottom-20 {
  padding-bottom: 20px;
}

.padding-right-20 {
  padding-right: 20px;
}

.mt-60px {
  margin-top: 60px;
}

.mb-80px {
  margin-bottom: 80px;
}

.text-cornflowerblue {
  color: cornflowerblue;
}

.text-lightbrown {
  color: rgb(136, 136, 31);
}

.background-lightgrey {
  background-color: #e9ecef !important;
}

.background-grey {
  background-color: #343a40;
}

.background-white {
  background-color: #ffffff;
}

.color-black {
  color: #16181b;
}

.color-black:hover {
  color: rgb(125, 20, 20);
}

.image-fit {
  width: 90%;
  height: auto;
  object-fit: contain;
  display: block;
  margin: 0 auto;
}

/* Limitira paragraf na određeni broj linija
  max-height: = line-height: × <number-of-lines> in em. 
*/
.max-lines {
  display: block; /* or inline-block */
  text-overflow: ellipsis;
  word-wrap: break-word;
  overflow: hidden;
  /* max-height: 3.6em; */
  line-height: 1.2em;
  
}

.article {
  width: 100%;
  padding-right: 300px;
  padding-left: 300px;
  margin-right: auto;
  margin-left: auto;
  text-align: justify;
  line-height: 1.7;
  padding-top: 45px;
  
}

.article pre, .article a {
  color: rgb(144, 77, 25);
  font-weight: 600;
}

.article a:hover {
  text-decoration: none;
}

/* Efekt fade-outa teksta na homepage-u za artikle primarne kategorije */
.fade-out {
  position: relative;
  max-height: 350px;  /* change the height */
}

/* Efekt fade-outa teksta na homepage-u za artikle primarne kategorije */
.fade-out:after {
  content: '';
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  background-image: linear-gradient( rgba(255, 255, 255, 0) 90%, rgba(255, 255, 255, 1) 100% );
}

.eliminate-overflow {
  /* width: 300px;
  height: 200px; */
  display: flex;
  flex-flow: column wrap;
  overflow: hidden;
}

/* Bootstrap override */

.navbar-nav > li{
  margin-left:30px;
  margin-right:30px;
}

.dropdown-menu {
  margin-top: 8px;
  border: 0px;
  border-radius: 0;
  background-color: #343a40;
} 

 .dropdown-item {
  color: white;
  font-weight: 300;
  font-size: 14px;
}

.dropdown-item.active, .dropdown-item:active {
  color: #16181b;
  text-decoration: none;
  background-color: #fff;
}

/* open all dropdown-menus on hover */
/* .navbar-nav li:hover > ul.dropdown-menu {
  display: block;
} */

/* opens only dropdown-submenu on hover */
.dropdown-menu li:hover > ul.dropdown-menu {
  display: block;
}


.dropdown-submenu {
  position:relative;
}

.dropdown-submenu>.dropdown-menu {
  top:0;
  left:100%;
  margin-top:-6px;
}

/* rotate caret and align it right status */
.dropdown-menu > li > a:after {
  float: right;
  margin-top: 9px;
  text-decoration: underline;
  transform: rotate(-90deg);
} 

/* rotate caret on hover */
/* .dropdown-menu > li > a:hover:after {
  text-decoration: underline;
  transform: rotate(-90deg);
}  */

.jumbotron {
  margin-bottom: 0; 
}

.jumbotron.category-view {
  padding-bottom: 185px;
}

